# swanky

./: Cargo.toml  README.md  generate_keccak_zkp.sh  generate_poseidon_zkp.sh  generate_vectoreyes.py  keccak_bristol_to_sieve.rs  poseidon.txt  poseidon_private.txt  poseidon_public.txt  poseidon_to_sieve.rs  poseidon_zkp.rs  private_input.txt  private_input_all_ones.txt  private_input_alternating.txt  proof.json  schmivitz_proof.json  shell.nix  swanky  todo.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
bristol2sieve/: Cargo.toml  README.md
bristol2sieve/output/: test_sieve.txt
bristol2sieve/src/: lib.rs  main.rs  transpiler.rs
bristol_2_sieve/: .gitignore  Cargo.toml  test_keccak_f_output.txt  test_sieve_output.txt  todo.md  transpiler.md  transpiler_diagram.md
bristol_2_sieve/src/: keccak_private_input.txt  main.rs  transpiler.rs
crates/field-binary/src/: f8b.rs
keccak-zk/: Cargo.toml  keccak_private_input.txt
keccak-zk/src/: main.rs  transpiler.rs
mac-n-cheese/compiler/src/: main.rs
mac-n-cheese/compiler/src/keccak_example/: .gitattributes  mod.rs
schmivitz/: .gitignore  Cargo.toml  README.md  proof.json
schmivitz-snark/: .gitignore  Cargo.toml  README.md  gadgets.md  todo.md
schmivitz-snark/examples/: advanced_usage.rs  basic_usage.rs  circuit.txt  example.rs  example_revise.rs
schmivitz-snark/src/: circuit.rs  constraints.rs  constraints_revise.rs  constraints_revised.rs  field_mappings.rs  lib.rs  prover.rs  serializable.rs  transcript.rs  vole_verification_boolean.rs  vole_verification_revised.rs
schmivitz-snark/src/gadgets/: circuit_traversal.rs  circuit_traverser.rs  constraint_verification.rs  masked_witness.rs  masked_witness_revise.rs  mod.rs  validation.rs
schmivitz-snark/src/tests/: circuit_constraint_tests.rs  mod.rs  witness_validation_tests.rs
schmivitz/src/: lib.rs  parameters.rs  proof.rs  prove_from_bristol.rs  vole.rs
schmivitz/src/proof/: prover_preparer.rs  prover_traverser.rs  transcript.rs  verifier_traverser.rs
schmivitz/src/vole/: insecure.rs
solidity_output/: vole_verifier.sol  vole_verifier_boolean.sol
vectoreyes/: Cargo.toml
vectoreyes/src/codegen/: generate.py
vectoreyes/src/codegen/templates/: core.tmpl
vectoreyes/src/codegen/templates/impl/: keccak.tmpl
