[package]
name = "bristol2sieve"
description = "A tool for compiling Keccak_f circuit from bristol-fashion to mac-n-cheese and generating/verifying proofs with schmivitz"
categories = ["cryptography"]
keywords = [
    "cryptography",
    "zero-knowledge",
    "VOLE",
    "VOLE-in-the-head",
    "NIZK",
    "non-interactive",
]
autoexamples = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.5.22", features = ["derive"] }
schmivitz.workspace = true
eyre = "0.6.12"
merlin = "3.0.0"
rand = "0.8.5"
bincode = "1.3.3"
tempfile = "3.14.0"
num_cpus = "1.16.0"
crossbeam = "0.8.4"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bristol2sieve"
path = "src/main.rs"
