[package]
name = "bristol_2_sieve"
version = "0.1.0"
edition = "2021"
description = "A tool for compiling Keccak_f circuit from bristol-fashion to mac-n-cheese and generating/verifying proofs with schmivitz"

[dependencies]
bristol-fashion = { path = "../bristol-fashion" }
clap = { version = "4.5.22", features = ["derive"] }
eyre = "0.6.12"
mac-n-cheese-ir = { path = "../mac-n-cheese/ir" }
mac-n-cheese-sieve-parser = { path = "../mac-n-cheese/sieve-parser" }
merlin = "3.0.0"
rand = "0.8.5"
schmivitz = { path = "../schmivitz" }
scuttlebutt = { path = "../scuttlebutt" }
vectoreyes = { path = "../vectoreyes" }
bincode = "1.3.3"
tempfile = "3.14.0"
num_cpus = "1.16.0"
crossbeam = "0.8.4"

[[bin]]
name = "bristol_2_sieve"
path = "src/main.rs"
