[package]
name = "schmivitz-snark"
version = "0.1.0"
edition = "2021"
description = "SNARK wrapper for VOLE in the Head verification"
license = "MIT"

[dependencies]
# arkworks
ark-ff = "0.3.0"
ark-std = "0.3.0"
ark-r1cs-std = "0.3.0"
ark-relations = "0.3.0"
ark-groth16 = "0.3.0"
ark-bn254 = "0.3.0"
ark-snark = "0.3.0"
ark-serialize = "0.3.0"
arkworks-solidity-verifier = "0.1.0"
# swanky
swanky-field.workspace = true
swanky-field-binary.workspace = true
swanky-serialization.workspace = true
schmivitz = { path = "../schmivitz" }
tempfile = "3.3.0"
# other dependencies
eyre = "0.6.12"
merlin = "3.0.0"
rand = "0.8.5"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"
