[package]
name = "schmivitz"
description = "A library for zero-knowledge protocols using VOLE-in-the-head"
categories = ["cryptography"]
keywords = [
    "cryptography",
    "zero-knowledge",
    "VOLE",
    "VOLE-in-the-head",
    "NIZK",
    "non-interactive",
]
autoexamples = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3.workspace = true
bristol2sieve.workspace = true
clap = "2.33"
eyre.workspace = true
generic-array = { version = "1.2.0", features = ["serde"] }
mac-n-cheese-sieve-parser.workspace = true
merlin.workspace = true
proptest.workspace = true
rand.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
tempfile = "3.3.0"
swanky-field.workspace = true
swanky-field-binary.workspace = true
swanky-serialization.workspace = true
vectoreyes.workspace = true
ark-bn254 = { version = "0.3.0" }
ark-ff = "0.3.0"
ark-std = "0.3.0"

[features]
default = []
snark = []

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true

[lints]
workspace = true

[[bin]]
name = "bristol_prover"
path = "src/bin/bristol_prover.rs"
